--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@types/node": "12.7.12",
     "@types/react-dom": "16.9.1",
     "axios": "^0.19.0",
+    "query-string": "^6.8.3",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
