attempt to fix acces_token error2

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -20,7 +20,7 @@
     "jsx": "react",
     "noImplicitAny": false, 
     "strictNullChecks": false,
-    "suppressImplicitAnyIndexErrors": true,
+    "suppressImplicitAnyIndexErrors": true
 
   },
   "include": [
