--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "@types/jest": "24.0.18",
     "@types/node": "12.7.12",
-    "@types/react-dom": "16.9.1",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
     "axios": "^0.19.0",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
