--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "@types/node": "12.7.12",
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
+    "animate.css": "^3.7.2",
     "axios": "^0.19.0",
+    "node-sass": "^4.12.0",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
+    "react-animate-on-scroll": "^2.1.5",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
+    "sass-loader": "^8.0.0",
     "typescript": "3.6.4"
   },
   "scripts": {
