--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "sass-loader": "^8.0.0",
+    "spotify-web-api-js": "^1.2.0",
     "typescript": "3.6.4"
   },
   "scripts": {
