--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "animate.css": "^3.7.2",
+    "antd": "^3.23.6",
     "axios": "^0.19.0",
     "node-sass": "^4.12.0",
     "query-string": "^6.8.3",
